--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -138,9 +138,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle_Center.svg&amp;filetimestamp=20240101090859&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle_Center.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle_Center.html" title="Sketcher CreateRectangle Center">Vycentrovan&yacute; obd&eacute;ln&iacute;k</a>: Vytvo&#345;&iacute; vycentrovan&yacute; obd&eacute;ln&iacute;k. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Obd&eacute;ln&iacute;k</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateOblong.svg&amp;filetimestamp=20240101090600&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateOblong.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateOblong.html" title="Sketcher CreateOblong">Zaoblen&yacute; obd&eacute;ln&iacute;k</a>: Vytvo&#345;&iacute; zaoblen&yacute; obd&eacute;ln&iacute;k. Idem.</li></ul></dd></dl>
 <ul><li><span id="Sketcher_CompCreateRegularPolygon"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateHexagon.svg&amp;filetimestamp=20240101090346&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateHexagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it mnoho&uacute;heln&iacute;k:</span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateTriangle.svg&amp;filetimestamp=20240101091254&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateTriangle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateTriangle.html" title="Sketcher CreateTriangle">Triangle</a>: creates an equilateral triangle. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: This is the same tool as <a href="../Sketcher_CreateRegularPolygon.html" title="Sketcher CreateRegularPolygon">Polygon</a> but with the number of sides preset to a specif value.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateTriangle.svg&amp;filetimestamp=20240101091254&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateTriangle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateTriangle.html" title="Sketcher CreateTriangle">Troj&uacute;heln&iacute;k</a>: vytvo&#345;&iacute; rovnostrann&yacute; troj&uacute;heln&iacute;k. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateRegularPolygon.html" title="Sketcher CreateRegularPolygon">Mnoho&uacute;heln&iacute;k</a>, ale s p&#345;ednastaven&yacute;m po&#269;tem stran na konkr&eacute;tn&iacute; hodnotu.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateSquare.svg&amp;filetimestamp=20240101091203&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateSquare.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateSquare.html" title="Sketcher CreateSquare">Square</a>: Creates a square. Idem.</li></ul></dd></dl>
 </div>
@@ -736,13 +734,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118114621
+Cached time: 20260118114740
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.449 seconds
-Real time usage: 0.734 seconds
-Preprocessor visited node count: 1519/1000000
+CPU time usage: 0.489 seconds
+Real time usage: 0.738 seconds
+Preprocessor visited node count: 1518/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -752,19 +750,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.309      1 -total
- 30.08%   11.525      1 Template:Sketcher_Tools_navi/cs
- 21.90%    8.389      2 Template:Navigation_menu_2
- 16.32%    6.253      1 Template:PropertyView
- 10.34%    3.963      1 Template:Userdocnavi/cs
-  7.00%    2.680      1 Template:Variable
-  6.90%    2.643     34 Template:Version
-  5.79%    2.220      2 Template:Docnav
-  4.46%    1.707     14 Template:KEY
-  3.97%    1.521      6 Template:Caption
+100.00%   57.802      1 -total
+ 22.92%   13.251      1 Template:Sketcher_Tools_navi/cs
+ 14.56%    8.417      1 Template:PropertyView
+ 12.25%    7.079      2 Template:Navigation_menu_2
+ 11.28%    6.519      1 Template:Userdocnavi/cs
+  8.14%    4.704      2 Template:Docnav
+  7.73%    4.468      1 Template:Variable
+  6.33%    3.660     34 Template:Version
+  5.97%    3.453     14 Template:KEY
+  5.96%    3.443      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114620 and revision id 1740343. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114739 and revision id 1740345. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
