--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -141,9 +141,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateTriangle.svg&amp;filetimestamp=20240101091254&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateTriangle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateTriangle.html" title="Sketcher CreateTriangle">Troj&uacute;heln&iacute;k</a>: vytvo&#345;&iacute; rovnostrann&yacute; troj&uacute;heln&iacute;k. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateRegularPolygon.html" title="Sketcher CreateRegularPolygon">Mnoho&uacute;heln&iacute;k</a>, ale s p&#345;ednastaven&yacute;m po&#269;tem stran na konkr&eacute;tn&iacute; hodnotu.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateSquare.svg&amp;filetimestamp=20240101091203&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateSquare.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateSquare.html" title="Sketcher CreateSquare">&#268;tverec</a>: Vytvo&#345;&iacute; &#269;tverec. Idem.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePentagon.svg&amp;filetimestamp=20240101090711&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePentagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePentagon.html" title="Sketcher CreatePentagon">P&#283;ti&uacute;heln&iacute;k</a>: Vytvo&#345;&iacute; p&#283;ti&uacute;heln&iacute;k. Idem.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateHexagon.svg&amp;filetimestamp=20240101090346&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateHexagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateHexagon.html" title="Sketcher CreateHexagon">Hexagon</a>: Creates a hexagon. Idem.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateHexagon.svg&amp;filetimestamp=20240101090346&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateHexagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateHexagon.html" title="Sketcher CreateHexagon">&Scaron;esti&uacute;heln&iacute;k</a>: Vytvo&#345;&iacute; &scaron;esti&uacute;heln&iacute;k. Idem.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateHeptagon.svg&amp;filetimestamp=20240101090316&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateHeptagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateHeptagon.html" title="Sketcher CreateHeptagon">Heptagon</a>: Creates a heptagon. Idem.</li></ul></dd></dl>
 </div>
@@ -730,13 +728,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118114903
+Cached time: 20260118114928
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.423 seconds
-Real time usage: 0.605 seconds
-Preprocessor visited node count: 1516/1000000
+CPU time usage: 0.431 seconds
+Real time usage: 0.556 seconds
+Preprocessor visited node count: 1515/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -746,19 +744,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.237      1 -total
- 21.38%    9.242      1 Template:Sketcher_Tools_navi/cs
- 14.16%    6.122      2 Template:Navigation_menu_2
- 13.44%    5.812      1 Template:Userdocnavi/cs
- 10.07%    4.356      1 Template:PropertyView
-  8.03%    3.474     34 Template:Version
-  6.69%    2.892      8 Template:VersionPlus
-  5.87%    2.539      2 Template:Docnav
-  5.77%    2.495      6 Template:Caption
-  5.61%    2.425      5 Template:MenuCommand
+100.00%   36.776      1 -total
+ 23.07%    8.483      1 Template:Sketcher_Tools_navi/cs
+ 13.32%    4.900      1 Template:PropertyView
+ 13.20%    4.853      2 Template:Navigation_menu_2
+ 12.87%    4.733      1 Template:Userdocnavi/cs
+  7.88%    2.898      6 Template:Caption
+  6.49%    2.385      2 Template:Docnav
+  5.78%    2.126      1 Template:Variable
+  5.70%    2.097     14 Template:KEY
+  5.70%    2.095     34 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114902 and revision id 1740349. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114928 and revision id 1740351. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
