--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -144,9 +144,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateHexagon.svg&amp;filetimestamp=20240101090346&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateHexagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateHexagon.html" title="Sketcher CreateHexagon">&Scaron;esti&uacute;heln&iacute;k</a>: Vytvo&#345;&iacute; &scaron;esti&uacute;heln&iacute;k. Idem.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateHeptagon.svg&amp;filetimestamp=20240101090316&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateHeptagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateHeptagon.html" title="Sketcher CreateHeptagon">Sedmi&uacute;heln&iacute;k</a>: Vytvo&#345;&iacute; sedmi&uacute;heln&iacute;k. Idem.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateOctagon.svg&amp;filetimestamp=20240101090622&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateOctagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateOctagon.html" title="Sketcher CreateOctagon">Osmi&uacute;heln&iacute;k</a>: Vytvo&#345;&iacute; osmi&uacute;heln&iacute;k. Idem.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRegularPolygon.svg&amp;filetimestamp=20240101091103&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRegularPolygon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRegularPolygon.html" title="Sketcher CreateRegularPolygon">Polygon</a>: Creates a regular polygon. The number of sides can be specified.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRegularPolygon.svg&amp;filetimestamp=20240101091103&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRegularPolygon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRegularPolygon.html" title="Sketcher CreateRegularPolygon">Mnoho&uacute;heln&iacute;k</a>: Vytvo&#345;&iacute; pravideln&yacute; mnoho&uacute;heln&iacute;k. Lze zadat po&#269;et stran.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span id="Sketcher_CompSlot"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateSlot.svg&amp;filetimestamp=20240101091129&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateSlot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Create Slot:</span></li></ul>
 </div>
@@ -724,13 +722,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118115038
+Cached time: 20260118115109
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.461 seconds
-Real time usage: 0.609 seconds
-Preprocessor visited node count: 1513/1000000
+CPU time usage: 0.415 seconds
+Real time usage: 0.569 seconds
+Preprocessor visited node count: 1512/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -740,19 +738,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.732      1 -total
- 26.03%    9.820      1 Template:Sketcher_Tools_navi/cs
- 17.86%    6.740      2 Template:Navigation_menu_2
- 12.44%    4.695      1 Template:Userdocnavi/cs
-  9.21%    3.474     34 Template:Version
-  8.13%    3.066      1 Template:PropertyView
-  5.74%    2.166      6 Template:Caption
-  5.67%    2.140      2 Template:Docnav
-  5.10%    1.923      5 Template:MenuCommand
-  4.88%    1.843      8 Template:VersionPlus
+100.00%   39.901      1 -total
+ 20.94%    8.354      1 Template:Sketcher_Tools_navi/cs
+ 16.18%    6.455      1 Template:Userdocnavi/cs
+ 13.74%    5.481      2 Template:Navigation_menu_2
+  9.01%    3.594      1 Template:PropertyView
+  8.67%    3.458     34 Template:Version
+  7.25%    2.891      2 Template:Docnav
+  6.56%    2.618      6 Template:Caption
+  5.70%    2.276      1 Template:Variable
+  5.43%    2.165      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118115037 and revision id 1740355. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118115108 and revision id 1740357. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
