--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -146,9 +146,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateOctagon.svg&amp;filetimestamp=20240101090622&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateOctagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateOctagon.html" title="Sketcher CreateOctagon">Osmi&uacute;heln&iacute;k</a>: Vytvo&#345;&iacute; osmi&uacute;heln&iacute;k. Idem.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRegularPolygon.svg&amp;filetimestamp=20240101091103&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRegularPolygon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRegularPolygon.html" title="Sketcher CreateRegularPolygon">Mnoho&uacute;heln&iacute;k</a>: Vytvo&#345;&iacute; pravideln&yacute; mnoho&uacute;heln&iacute;k. Lze zadat po&#269;et stran.</li></ul></dd></dl>
 <ul><li><span id="Sketcher_CompSlot"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateSlot.svg&amp;filetimestamp=20240101091129&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateSlot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it dr&aacute;&#382;ku:</span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateSlot.svg&amp;filetimestamp=20240101091129&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateSlot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateSlot.html" title="Sketcher CreateSlot">Slot</a>: Creates a slot.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateSlot.svg&amp;filetimestamp=20240101091129&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateSlot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateSlot.html" title="Sketcher CreateSlot">Dr&aacute;&#382;ka</a>: Vytvo&#345;&iacute; dr&aacute;&#382;ku.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArcSlot.svg&amp;filetimestamp=20240101085806&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArcSlot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArcSlot.html" title="Sketcher CreateArcSlot">Arc Slot</a>: Creates an arc slot. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul></dd></dl>
 </div>
@@ -720,13 +718,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118115221
+Cached time: 20260118115258
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.426 seconds
-Real time usage: 0.583 seconds
-Preprocessor visited node count: 1511/1000000
+CPU time usage: 0.433 seconds
+Real time usage: 0.589 seconds
+Preprocessor visited node count: 1510/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -736,19 +734,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.853      1 -total
- 21.24%    7.616      1 Template:Sketcher_Tools_navi/cs
- 13.34%    4.783      2 Template:Navigation_menu_2
- 11.56%    4.145      1 Template:Userdocnavi/cs
- 11.38%    4.081      1 Template:PropertyView
-  8.37%    3.002     34 Template:Version
-  6.31%    2.261      5 Template:MenuCommand
-  6.16%    2.207      6 Template:Caption
-  5.87%    2.103      8 Template:VersionPlus
-  5.40%    1.935      2 Template:Docnav
+100.00%   32.467      1 -total
+ 25.18%    8.174      1 Template:Sketcher_Tools_navi/cs
+ 15.95%    5.179      1 Template:Userdocnavi/cs
+ 14.40%    4.674      2 Template:Navigation_menu_2
+  8.77%    2.848      1 Template:PropertyView
+  8.15%    2.645      2 Template:Docnav
+  6.60%    2.142     34 Template:Version
+  5.29%    1.719      8 Template:VersionPlus
+  5.06%    1.643     14 Template:KEY
+  4.77%    1.548      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118115220 and revision id 1740359. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118115258 and revision id 1740361. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
